--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <img src="/assets/photo-1476231682828-37e571bc172f.webp" alt="ForestBG">
     <title>Safari Website</title>
     <link rel="stylesheet" href="main.css">
 </head>
