Removed alyssas things, changed to white text.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <img src="/assets/photo-1476231682828-37e571bc172f.webp" alt="ForestBG">
-    <title>Safari Website</title>
+    <title>wrighte</title>
     <link rel="stylesheet" href="main.css">
 </head>
+<div class="container">
+    <img src="/assets/photo-1476231682828-37e571bc172f.webp" alt="ForestBG" style="width:100%;">
+    <div class="centered">Ethan Wright | Software Developer</div>
+  </div>
 <body class="light-theme">
     <h1>Alyssa's Page</h1>
     <p id="msg">Current tasks:</p>
@@ -15,7 +18,6 @@
         <li class="list">Add visual styles</li>
         <li class="list">Add light and dark themes</li>
         <li style="list-style-type:circle">Enable switching the theme</li>
-        <img src="https://www.burgesspetcare.com/blog/hamsters/hamster-behaviour-explained/">
     </ul>
     <div>
         <button class = "btn">Dark</button>
