--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="/assets/photo-1476231682828-37e571bc172f.webp" alt="ForestBG" style="width:100%;">
     <div class="centered">Ethan Wright | Software Developer</div>
   </div>
-<body class="light-theme">
+<!-- <body class="light-theme">
     <h1>Alyssa's Page</h1>
     <p id="msg">Current tasks:</p>
     <ul>
@@ -23,6 +23,6 @@
         <button class = "btn">Dark</button>
     </div>
     <script src="app.js"></script>
-    <noscript>You need to have JavaScript enabled.. duhhh</noscript>
+    <noscript>You need to have JavaScript enabled.. duhhh</noscript> -->
 </body>
 </html>
