--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,22 +8,20 @@
     <title>wrighte</title>
     <link rel="stylesheet" href="main.css">
 </head>
+
 <div class="container">
     <img src="/assets/photo-1476231682828-37e571bc172f.webp" alt="ForestBG" style="width:100%;">
-    <div class="centered">Ethan Wright | Software Developer</div>
-  </div>
-<!-- <body class="light-theme">
-    <h1>Alyssa's Page</h1>
-    <p id="msg">Current tasks:</p>
-    <ul>
-        <li class="list">Add visual styles</li>
-        <li class="list">Add light and dark themes</li>
-        <li style="list-style-type:circle">Enable switching the theme</li>
-    </ul>
-    <div>
-        <button class = "btn">Dark</button>
+
+    <div class="centered">
+        <h1>Ethan Wright | Software Developer</h1>
     </div>
-    <script src="app.js"></script>
-    <noscript>You need to have JavaScript enabled.. duhhh</noscript> -->
-</body>
+</div>
+
+<div class="container">
+    <div class="top-left">
+        <h2>Programming Languages</h2>
+        <li>C#, Python Java</li>
+    </div>
+</div>
+
 </html>
