--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="/assets/photo-1476231682828-37e571bc172f.webp" alt="ForestBG" style="width:100%;">
 
     <div class="centered">
-        <h1>Ethan Wright | Software Developer</h1>
+        <h1>hannnah <3 vanessa <3 tiago</h1>
     </div>
 </div>
 
