--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="container">
     <div class="top-left">
         <h2>Programming Languages</h2>
-        <li>C#, Python Java</li>
+        <li>C#, Python, Java</li>
     </div>
 </div>
 
