--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <div class="button-container">
         <a href="assets/resume.pdf" id="resume" class="button">Resume</a>
-        <a href="https://github.com/wd-ethan" id="github" class="button">GitHub</a>
+        <a href="https://github.com/wrighted" id="github" class="button">GitHub</a>
         <a href="https://www.linkedin.com/in/ethan-wright-a5611a208/" id="linkedin" class="button">LinkedIn</a>
     </div>
 
